apps/base/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      securityContext:
        fsGroup: 33           
        runAsUser: 33           
        runAsGroup: 33  
      containers:
        - name: linkding
          image: ghcr.io/sissbruecker/linkding:1.44.2-plus-alpine
          volumeMounts:
            - mountPath: "/etc/linkding/data"
              name: linking-data
          securityContext:       
            allowPrivilegeEscalation: false 
          ports:
            - containerPort: 9090
      volumes:
       - name: linking-data
         persistentVolumeClaim:
           claimName: linking-data
