apps/base/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: linkding
  type: LoadBalancer
